[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-google-recaptcha-v2"
version = "0.0.4"
description = "Google ReCAPTCHA v2 Integration"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Masen Furer", email = "m_github@0x26.net" }]
keywords = [
    "reflex",
    "reflex-custom-components"]

dependencies = [
    "httpx>=0.25.1",
    "reflex>=0.4.6",
]

classifiers = [
  "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/masenf/reflex-google-recaptcha-v2"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["custom_components"]
